# nodetool-fal

./: .coverage  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CODEGEN_15_PERCENT_SUMMARY.md  CODEGEN_25_PERCENT_SUMMARY.md  CODEGEN_50_PERCENT_SUMMARY.md  CODEGEN_COMPLETION_PLAN.md  CODEGEN_SUMMARY.md  IMAGE_TO_IMAGE_MIGRATION.md  README.md  TEST_COVERAGE_SUMMARY.md  TEXT_TO_IMAGE_MIGRATION.md  all_models.json  coverage.json  pyproject.toml  requirements-dev.txt  ruff.toml
.codegen_cache/: 10551bddae21148a.json  3b4dd37045576b87.json  4b81d93d4bc60107.json  58412f541f40d7aa.json  798452f9df57ac25.json  88c96e37f64faddb.json  94b5d92002f5bb66.json  e41e74efed1a2f24.json  f0051f361bac4316.json  fd7f8626227ed69a.json
.cursor/skills/nodetool-fal-node-writer/: SKILL.md
.cursor/skills/nodetool-fal-node-writer/references/: nodetool-fal-patterns.md
.github/opencode-memory/: README.md  features.md  node-creation-guide.md  repository-context.md
.github/workflows/: opencode-fal-model-sync.yml  publish-wheel.yml  pytest.yml  text2image.yml
codegen/: README.md  auto_config_generator.py  bulk_config_generator.py  compare.py  generate.py  generate_all.py  generate_provider_models.py  merge_configs.py  node_generator.py  schema_fetcher.py  schema_parser.py
codegen/configs/: 3d_to_3d.py  audio_to_audio.py  audio_to_text.py  audio_to_video.py  image_to_3d.py  image_to_image.py  image_to_json.py  image_to_video.py  json_processing.py  llm.py  speech_to_speech.py  speech_to_text.py  template.py  text_to_3d.py  text_to_audio.py  text_to_image.py  text_to_json.py  text_to_speech.py  text_to_text.py  text_to_video.py  training.py  unknown.py  video_to_audio.py  video_to_text.py  video_to_video.py  vision.py
examples/: run_text2image.py
src/nodetool/: utils.py
src/nodetool/dsl/fal/: llm.py  (+29 more)
src/nodetool/fal/: __init__.py  fal_image_provider.py  fal_provider.py  generated_models.py
src/nodetool/package_metadata/: nodetool-fal.json
tests/: test_dynamic_schema_node.py  test_fal_node.py  test_fal_provider.py  test_generated_models.py  test_image_to_image_nodes.py  test_image_to_video_nodes.py  test_model3d_nodes.py  test_nodes.py  test_speech_to_text_nodes.py  test_text_to_audio_nodes.py  test_text_to_video_nodes.py  test_utils.py
(+50 files in other folders)
