[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-fal"
version = "0.1.0"
description = "Nodetool FAL nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
include = []
repository = "https://github.com/nodetool-ai/nodetool-fal"

[tool.poetry.dependencies]
python = "^3.10"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
fal-client = "*"
