[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-fal"
version = "0.6.3-rc.22"
description = "Nodetool FAL nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core==0.6.3-rc.22", "fal-client"]

[tool.hatch.metadata]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
include = [
    "src/nodetool/package_metadata/*.json",
]
artifacts = ["package_metadata/nodetool-fal.json"]

[tool.pytest.ini_options]
addopts = "-ra"

[tool.ruff]
exclude = ["src/nodetool/dsl/*"]

[tool.black]
extend-exclude = 'src/nodetool/nodes/fal/(speech_to_text|image_to_image)\.py'
